web/src/components/weekly-view/WeeklyView.css
.weekly-view {
  height: 100%;
  display: flex;
  flex-direction: column;
  padding: 2.5rem 2.5rem 1rem 2.5rem;
  overflow: auto;
}

.weekly-view-day-container {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  overflow: auto;
}

@media screen and (max-width: 648px) {
  .weekly-view-day-container {
    flex-direction: column;
    overflow: scroll;
  }
  
}

